<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/new_life_for_mirea_activity" />

    <Button
        android:id="@+id/button20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn1" />

    <Button
        android:id="@+id/button21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn2" />

    <Button
        android:id="@+id/button22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn3" />

    <Button
        android:id="@+id/button23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn4" />

    <Button
        android:id="@+id/button24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn5" />

    <Button
        android:id="@+id/button25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn6" />
</LinearLayout>